src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>OP_LastReadingDate__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object</description>
        <label>Last Reading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OP_MeterReadingData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meter Reading Data</label>
        <referenceTo>APTS_Meter_Reading_Data__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OP_NewFreeVendingCounterReading__c</fullName>
        <label>New Free Vending Counter Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_NewPaidCounterReading__c</fullName>
        <label>New Paid Counter Reading</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_NewReadingDate__c</fullName>
        <description>Operating-  Used to stamp the date at which the last reading is taken.</description>
        <label>New Reading Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OP_PCBchanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Operator can indicate that during his regular monthly reading the Printer Cirquit Board was previously changed ( mostly due to an S10 of an Engineer.)</description>
        <inlineHelpText>Set to yes when you see that the PCB was reset.</inlineHelpText>
        <label>PCB changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_PerformingOperator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The operator who performed the Operating Task. which will be stamped on the Physical Asset as the &quot;Last Performing Operator&quot;</description>
        <label>Performing Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Performing Operator)</relationshipLabel>
        <relationshipName>Work_Order_Line_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OP_PreferredOperator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operating:  used to indicate to ClickSoftware the preferred Operator, which MAY result in scheduling him/her for this task.</description>
        <label>Preferred Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Preferred Operator)</relationshipLabel>
        <relationshipName>Work_Order_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OP_RinseRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_TimeIndicator__c</fullName>
        <description>Indicates to Click Scheduler to plan this task the earliest (AM) or latest (PM) on that day for the operator to perfrom this task.</description>
        <inlineHelpText>AM or PM  will indicate the earliest or latest on this day.</inlineHelpText>
        <label>Time Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OP_UniqueCounterReadingID__c</fullName>
        <description>This field is used to make sure Click will only update / insert a counter reading record once.</description>
        <externalId>true</externalId>
        <label>Unique Counter Reading ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OP_UniquecounterID__c</fullName>
        <description>Operating - Field coming from the Counter Reading Object  that serves as the unique identifier for collecting the right readings for a counter.</description>
        <label>Unique counter ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnsiteTimestamp__c</fullName>
        <label>On site Time stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpFilledbyOperator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Operating: Indicates that the Operator HAS filled the machine.</description>
        <inlineHelpText>please Check when you have filled the machine for this Task.</inlineHelpText>
        <label>Filled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operating_Bucket__c</fullName>
        <label>Operating Bucket</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunitySubType__c</fullName>
        <label>Opportunity Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OpportunityType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New/Replace Machine</fullName>
                </value>
                <value>
                    <fullName>Extra Machine</fullName>
                </value>
                <value>
                    <fullName>Breakdown</fullName>
                </value>
                <value>
                    <fullName>Check Machine</fullName>
                </value>
                <value>
                    <fullName>Check Multiple Machines</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Costs/Invoice</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Contract Information</fullName>
                </value>
                <value>
                    <fullName>Water Filter Change</fullName>
                </value>
                <value>
                    <fullName>Contact request</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <description>Picklist of type opportunities  Operating: Added Field Service as Opty Type)</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptionDeliveredbyLSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[KTS-1507]: Field used for work order add option field roll up summary to indicate if a work order line item requires LSP.</description>
        <label>Option Delivered by LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderHeaderSAPId__c</fullName>
        <description>TS used to received the  SAP Order header wrt the Work Order Billing Interface.  KTS-384</description>
        <label>Order Header SAP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TS: Indicates the order line item the WOLI is related to for Sales Orders.</description>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderedQuantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutofboundReading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the reading by the Operator was confirmed to be out of bound.</description>
        <label>Out of bound Reading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutsideSLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outside SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <description>Indicates if the task is overdue which does not work for tasks which are either completed or canceled as it will always indicate that the task is overdue.</description>
        <formula>IF(ISPICKVAL(WorkOrderLineItemType__c, &quot;Task&quot;) &amp;&amp; NOW() &gt; TaskDueDate__c, TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnedByCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the machine or option is owned by the customer.</description>
        <label>Owned by Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>This indicates the PO number for machine services.</description>
        <inlineHelpText>This indicates the PO number for machine services.</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Type__c</fullName>
        <formula>&quot;SFA&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNotes__c</fullName>
        <description>Concatenates parts in a string</description>
        <label>Part Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartUnderWarranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Under Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Notes__c</fullName>
        <label>Part Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_used_from_own_storage_location__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Part used from own car stock?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartsOrdered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parts Ordered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentModuleSerialNumber__c</fullName>
        <label>Payment Module Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerformIntegrationLog__c</fullName>
        <description>KTS-1775: Field responsible for re-triggering field service task when related objects were updated</description>
        <label>Perform Integration Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates the physical asset applicable for the work.</description>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Service Jobs</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PhysicalLocation__c</fullName>
        <description>TS: Indicates the physical location of the machine.</description>
        <label>New Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plug_Play__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plug &amp; Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Populate_Pricebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Populate Pricebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of preferred engineer to a job.</description>
        <label>Preferred Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (Preferred Engineer)</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Operator_Executed_Task__c</fullName>
        <formula>ISPICKVAL( Status, &quot;Completed&quot;) &amp;&amp;
ExecutingEngineer__c =  OP_PreferredOperator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Operator Executed Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PremiumCustomer__c</fullName>
        <description>This indicates whether the account locations related account is a premium customer.</description>
        <formula>IF(
OR( 
ISPICKVAL(AccountLocation__r.Apttus_Config2__AccountId__r.Account_Tier__c, &quot;Gold&quot;),
ISPICKVAL(AccountLocation__r.Apttus_Config2__AccountId__r.Account_Tier__c, &quot;Platinum&quot;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventiveCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preventive Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventiveMaintenanceDone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that PrevMain was done</description>
        <label>Preventive Maintenance Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreventiveMaintenancePerformedDate__c</fullName>
        <label>Preventive Maintenance Performed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductCodeMissing__c</fullName>
        <label>Product Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>This indicates the product code of the related product.</description>
        <formula>Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>This indicates the product description.</description>
        <formula>Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuotingSignature__c</fullName>
        <label>Quoting Signature</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Re_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadytosendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecipeSoftware__c</fullName>
        <label>Recipe Software</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RecipeText__c</fullName>
        <label>Recipe Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RefurbishedMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether a refurbished machine is provided.</description>
        <label>Refurbished Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RejectionComment__c</fullName>
        <description>Rejection Comments</description>
        <label>Rejection Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectionDate__c</fullName>
        <description>Date of task rejection.</description>
        <label>Rejection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RejectionReason__c</fullName>
        <description>Rejection Reason</description>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No Parts</fullName>
                </value>
                <value>
                    <fullName>Not Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelateTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Related To WOLI</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemoveScheduleRestrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Schedule Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepeatVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Replace_WTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace WTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiredEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Resource Object</description>
        <label>Required Engineer</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>WorkOrderLineItems2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiredUpfrontCall__c</fullName>
        <description>This indicates whether an upfront call is required before executing the service job.</description>
        <formula>IF(AccountLocation__c != null, AccountLocation__r.Upfront_Call_Needed__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Upfront Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresLSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates that a LSP is required for the action.</description>
        <label>Requires LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresScreening__c</fullName>
        <description>This indicates whether the engineer requires screening.</description>
        <formula>IF(AccountLocation__c != null,  AccountLocation__r.Screening_Required__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresStopover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the machine is applicable to the stop-over concept.</description>
        <label>Requires Stopover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresVCACertificate__c</fullName>
        <description>This indicates that an engineer requires a VCA certificate.</description>
        <formula>IF(AccountLocation__c != null, AccountLocation__r.Requires_VCA_Certificate__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires VCA Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResourceSAPNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Employee Number referring to Resource Name Record.</description>
        <label>SAP Employee Number</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Work Order Line Items (SAP Employee Number)</relationshipLabel>
        <relationshipName>WorkOrderLineItems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseProfile__c</fullName>
        <label>Response Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleTeam__c</fullName>
        <description>District (Ex: UU1 FS NL)</description>
        <label>Responsible Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BE_1_RouteSales</fullName>
                </value>
                <value>
                    <fullName>BE_1_Vlaanderen</fullName>
                </value>
                <value>
                    <fullName>BE_2_ Brussel</fullName>
                </value>
                <value>
                    <fullName>BE_3_Wallonië</fullName>
                </value>
                <value>
                    <fullName>BE_4_RouteSales</fullName>
                </value>
                <value>
                    <fullName>BE_4_Specialist</fullName>
                </value>
                <value>
                    <fullName>BE_5_Installation</fullName>
                </value>
                <value>
                    <fullName>BE_Bravilor</fullName>
                </value>
                <value>
                    <fullName>BE_Coges</fullName>
                </value>
                <value>
                    <fullName>BE_HTI</fullName>
                </value>
                <value>
                    <fullName>BE_JDS</fullName>
                </value>
                <value>
                    <fullName>BE_Jura</fullName>
                </value>
                <value>
                    <fullName>BE_Limarc</fullName>
                </value>
                <value>
                    <fullName>BE_N-W</fullName>
                </value>
                <value>
                    <fullName>BE_Schaerer</fullName>
                </value>
                <value>
                    <fullName>BE_Valinso</fullName>
                </value>
                <value>
                    <fullName>BE_Xafax</fullName>
                </value>
                <value>
                    <fullName>DE_TS_MITTE</fullName>
                </value>
                <value>
                    <fullName>DE_TS_NORD</fullName>
                </value>
                <value>
                    <fullName>DE_TS_SÜD</fullName>
                </value>
                <value>
                    <fullName>DK_Kbh</fullName>
                </value>
                <value>
                    <fullName>DK_Knud Jensen &amp; Søn</fullName>
                </value>
                <value>
                    <fullName>DK_Nord</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Fyn</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Nord</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Sjælland_Syd</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Sjælland_Vest</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Syd</fullName>
                </value>
                <value>
                    <fullName>DK_Operating_Øst</fullName>
                </value>
                <value>
                    <fullName>DK_Service_Bornholm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RetrievedStartTime__c</fullName>
        <description>This field retrieves the actual start date from the work order in case of Full Operating cases. Else it will retrieve it from the work order line item itself.</description>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
StartDate__c ,
WorkOrder.StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retrieved Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RetriggerClick__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Retrigger Click</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReturnNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the machine or option needs to be returned. This is possible when the machine and/or options were rented or when the customer would like to have the machine to be picked-up.</description>
        <label>Return Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>&lt;Indicator whether a Task is a Return task&gt;</description>
        <inlineHelpText>When checked  it indicates this is a Return Task</inlineHelpText>
        <label>Return Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Needed_Comment__c</fullName>
        <label>Return Needed Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Return_Needed_Parts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Needed Parts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Needed_S10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Needed S10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_task_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an indicator to show that a completed task in which return is needed, is already processed and a return task is generated out of it.</description>
        <label>Return task processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review needed.</description>
        <label>Review Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Id__c</fullName>
        <formula>Text(RootWorkOrderLineItem.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundTrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round-Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Route_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Line Item</label>
        <referenceTo>Route_Line_Item__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Name__c</fullName>
        <label>Route Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Task__c</fullName>
        <formula>WorkOrder.RecordType.Name = &apos;Operating (Route) Work Order&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAMId__c</fullName>
        <description>This indicates the unique communication number.</description>
        <label>SAM Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPAccountLocationID__c</fullName>
        <description>This field indicates the SAP Customer ID of the account location required for routesales.</description>
        <formula>AccountLocation__r.SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPPurchaseOrder__c</fullName>
        <label>SAP Purchase Order</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPResourceEmail__c</fullName>
        <description>This indicates the email of the executing resource.</description>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.EmailAddress__c, 
WorkOrder.ExecutingEngineer__r.EmailAddress__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Resource Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPResourceNumber__c</fullName>
        <description>This indicates the SAP Number of the executing resource.</description>
        <formula>IF(ISBLANK(WorkOrder.Route_Number__c),
ExecutingEngineer__r.Name,
WorkOrder.ExecutingEngineer__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Resource Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Billing_Order_Type__c</fullName>
        <formula>&quot;XD11&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Billing Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <description>SAP id of the Account location linked to the Physical Asset</description>
        <formula>AccountLocation__r.SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Order_Type__c</fullName>
        <formula>&apos;XA01&apos;</formula>
        <label>SAP Sales Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCOrderType__c</fullName>
        <formula>IF( OR(
ISPICKVAL(WorkOrderType__c, &quot;S30&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S31&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S32&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S42&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S43&quot;),
ISPICKVAL(WorkOrderType__c, &quot;S44&quot;),  
ISPICKVAL(WorkOrderType__c, &quot;S50&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S51&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S52&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S53&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S60&quot;), 
ISPICKVAL(WorkOrderType__c, &quot;S10&quot;)), &quot;ZSER&quot;, 
IF(OR(
ISPICKVAL(WorkOrderType__c, &quot;S40&quot;),
ISPICKVAL(WorkOrderType__c, &quot;S41&quot;)), &quot;ZINS&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Miss_Part_Order__c</fullName>
        <formula>&apos;SF Missing Parts Order&apos;</formula>
        <label>SF Missing Parts Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLADate__c</fullName>
        <description>TS: Indicates the SLA date for the line item.</description>
        <label>SLA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SafetyCheckResult__c</fullName>
        <label>Safety Check Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SafetyCheck__c</fullName>
        <label>Safety Check</label>
        <type>TextArea</type>
    </fields>
</CustomObject>